chat dark mode css fixed

--- a/FrontEnd/Web/src/components/Chats/ChatPage.module.css
+++ b/FrontEnd/Web/src/components/Chats/ChatPage.module.css
@@ -8,7 +8,7 @@
 .chat_list {
   margin-top: 3%;
   width: 25%;
-  background-color: #f2f2f2;
+  background-color: var(--color-background);
   padding: 20px;
   overflow-y: auto;
 }
@@ -24,7 +24,7 @@
 .avatar {
   width: 50px;
   height: 50px;
-  background-color: #ccc;
+  background-color: var(--color-background);
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -45,7 +45,7 @@
 }
 
 .chat_header {
-  background-color: #f2f2f2;
+  background-color: var(--color-background);
   padding: 20px;
   border-bottom: 1px solid #ccc;
 }
@@ -65,11 +65,15 @@
 
 .chat_input input {
   flex: 1;
+  width:80%;
   padding: 10px;
 }
 
 .chat_input button {
   margin-left: 10px;
+}
+.chatForm{
+  width: 100%;
 }
 
 .submit_div {
